--- a/css/style.css
+++ b/css/style.css
@@ -878,3 +878,9 @@ border: 2px solid #fff;
 .active{
     color: #7cc576 !important;
 }
+
+@media(max-width: 767px){
+	.img-mobile{
+		display: none;
+	}
+}
